# rime-deploy

./: CMakeLists.txt  Makefile  README.md  rime-deploy
.github/workflows/: build.yml  release.yml
src/: config.c  config.h  deploy.c  deploy.h  main.c  platform.c  platform.h  utils.c  utils.h
